<resources>
    <string name="app_name">examenUni</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Login -->
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="button">Iniciar Sesión</string>
    <string name="registrate">Regístrate</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="todo">TODO</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="or">— or —</string>
    <string name="eres_nuevo">¿Eres nuevo?</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="registrar">Registrar</string>
    <string name="nombre">Nombre</string>
    <string name="inicia_sesion">Inicia Sesión</string>
    <string name="crea_tu_cuenta">Crea tu Cuenta</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
</resources>